bat.bool1.nearhundred.NearHundred.scala.error
Erreur de compilation :
NearHundred:3: error: constructor cannot be instantiated to expected type;
 found   : (T1, T2)
 required: Int
    case (true,true) if (111>n,n>89) => return true
         ^NearHundred:3: error: type mismatch;
 found   : (Boolean, Boolean)
 required: Boolean
    case (true,true) if (111>n,n>89) => return true
                        ^NearHundred:4: error: constructor cannot be instantiated to expected type;
 found   : (T1, T2)
 required: Int
    case (true,true) if (211>n,n>189) => return true
         ^NearHundred:4: error: type mismatch;
 found   : (Boolean, Boolean)
 required: Boolean
    case (true,true) if (211>n,n>189) => return true
                        ^