bat.bool1.nearhundred.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
  n match {
    case (true,true) if (111>n,n>89) => return true
    case (true,true) if (211>n,n>189) => return true
  }
  return false
}